# GP2019

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/Ex10Platformer/: BirdMovementComponent.cpp  BirdMovementComponent.hpp  CharacterController.cpp  CharacterController.hpp  MovingPlatformComponent.cpp  MovingPlatformComponent.hpp  PlatformerGame.cpp  ScriptComponent.cpp
Sources/Ex4Asteroids/: Asteroid.cpp  Asteroid.hpp  AsteroidHandler.cpp  AsteroidHandler.hpp  AsteroidsGame.cpp  AsteroidsGame.hpp  GameObject.cpp  GameObject.hpp  GameObjectList.cpp  GameObjectList.hpp  Laser.cpp  Laser.hpp  SpaceShip.cpp  SpaceShip.hpp  asteroids.json  bang.cpp  bang.hpp
Sources/Ex6Wolf/: FirstPersonController.cpp  FirstPersonController.hpp  Wolf3D.cpp  Wolf3D.hpp  WorldMap.cpp  level0.json
Sources/Ex8Bird/: BirdController.cpp  BirdController.hpp  BirdGame.cpp  BirdGame.hpp  GameObject.hpp  SideScrollingCamera.cpp
Sources/ExSes2/Exercise3-MineSweeper/: MineSweeper.cpp  MineSweeper.hpp
